...
                android:text="@string/ingredients_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/secondary_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.AppCompatTextView
...
                android:text="@string/steps_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/secondary_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/recyclerview_ingredients">

            </android.support.v7.widget.RecyclerView>

...
