<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">


        <RelativeLayout
            android:id="@+id/indicator_layout"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent">

            <LinearLayout
                android:id="@+id/circles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

            </LinearLayout>
        </RelativeLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/indicator_layout"></android.support.v4.view.ViewPager>

    </RelativeLayout>
</layout>