...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_main_container"
        tools:context=".ui.activities.MainActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_desserts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/no_network_container"
...
